# style_transfer_agent_with_mcp

./: .gitignore  README.md  basic_agent_with_style_transfer.py  core_agent.py  gradio_app.py  main.py  mcp_client.py  pyproject.toml  setup.sh  style_transfer_mcp_server.py  style_transfer_tool.py  test_style_transfer_tool.py
StyTR-2/: test.py
StyTR-2/models/: StyTR.py
StyTR-2/util/: misc.py
documentation/: README_zh.md  STYLE_TRANSFER_INTEGRATION_SUMMARY.md  style_transfer_guide.md
